[package]
name = "redoxer"
version = "0.2.43"
description = "Method for quickly running programs inside of Redox from a KVM capable OS."
license = "MIT"
authors = ["Jeremy Soller <jackpot51@gmail.com>"]
repository = "https://gitlab.redox-os.org/redox-os/redoxer"
edition = "2018"

[dependencies]
dirs = "5.0.1"
redox_installer = "0.2.19"
redox_syscall = "0.5"
redoxfs = "0.6.1"
tempfile = "3.8.1"
toml = "0.5"
proc-mounts = "0.3.0"
ureq = { version = "2.10.1", default-features = false, features = ["tls"] }
flate2 = "1.0.33"
tar = "0.4.41"
indicatif = "0.17.8"
